# MyEngine

./: CMakeLists.txt  MyEngine.h
src/: Log.cpp  Log.h  Window.cpp  Window.h
